k8s-rook-ceph/dashboard-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-ui-deployment
  namespace: otus
  labels:
    app: dashboard-ui
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: dashboard-ui
  template:
    metadata:
      labels:
        app: dashboard-ui
    spec:
      containers:
      - name: dashboard-ui
        image: zikarimovlt/dashboard-ui:v1
        ports: 
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
