k8s-rook-ceph/documents-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documents-api-deployment
  namespace: otus
  labels:
    app: documents-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: documents-api
  template:
    metadata:
      labels:
        app: documents-api
    spec:
      containers:
      - name: documents-api
        image: zikarimovlt/documents-api:v1
        ports: 
        - containerPort: 3001
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /documents/health-check
            port: 3001
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /documents/health-check
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 5
