k8s-rook-ceph/postgres-documents-deployment-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-documents-deployment-new
  namespace: otus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-documents-new
  template:
    metadata:
      labels:
        app: postgres-documents-new
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-documents-ceph-pvc
