k8s-rook-ceph/dashboard-ui-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: dashboard-ui-service
  namespace: otus
spec:
  selector:
    app: dashboard-ui
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
