k8s-rook-ceph/postgres-documents-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-documents-service
  namespace: otus
spec:
  selector:
    app: postgres-documents
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
