k8s-rook-ceph/postgres-users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-users-service
  namespace: otus
spec:
  selector:
    app: postgres-users
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
