k8s-rook-ceph/users-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
  namespace: otus
spec: 
  selector:
    app: users-api
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
  type: ClusterIP
