k8s-rook-ceph/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: otus
  annotations:
    # Rewrite /api/users -> /users, /api/documents -> /documents
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - otus-test
      secretName: otus-test-tls
  rules:
    - host: otus-test
      http:
        paths:
          - path: /api/(users)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-api-service
                port:
                  number: 3002
          - path: /api/(documents)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: documents-api-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-ui-service
                port:
                  number: 3000
